--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.1.4",
     "react": "^18",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
