--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-scroll-up": "^1.4.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
