--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.3",
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.1.4",
